# fastimer

./: Cargo.toml
fastimer/: Cargo.toml
fastimer-core/: Cargo.toml  README.md
fastimer-core/src/: lib.rs
fastimer-timewheel/: Cargo.toml  README.md
fastimer-timewheel/src/: lib.rs
fastimer-timewheel/tests/: integration.rs
fastimer-tokio/: Cargo.toml  README.md
fastimer-tokio/src/: lib.rs
fastimer/src/: lib.rs
fastimer/src/schedule/: arbitrary.rs  notify.rs  simple.rs
fastimer/tests/: interval.rs  schedule.rs
xtask/: Cargo.toml
xtask/src/: main.rs
